tests/ui/error-codes/E0184.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/E0184.rs:1:10
   |
LL | #[derive(Copy)]
   |          ^^^^ `Copy` not allowed on types with destructors
   |
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0184`.
